--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+    	<sonar.projectKey>ANANDS9822_devops-github-poc</sonar.projectKey>
+    	<sonar.organization>anands9822</sonar.organization>
+    	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencyManagement>
@@ -87,8 +90,6 @@
 			<build>
 				<plugins>
 					<plugin>
-						<!--
-						https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<version>3.2.5</version>
@@ -97,7 +98,7 @@
 							<argLine>${argLine}</argLine>
 							<testFailureIgnore>true</testFailureIgnore>
 						</configuration>
-					</plugin>
+					</plugin>				
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
@@ -110,7 +111,7 @@
 							</execution>
 							<execution>
 								<id>report</id>
-								<phase>install</phase>
+								<phase>verify</phase>
 								<goals>
 									<goal>report</goal>
 								</goals>
